# das

./: pyproject.toml
.github/workflows/: lint.yml  notion.yml  salesforce.yml
lib/: python.py
libs/: python.py
src/: ast.py  astet.py  test.py  wi.py
stubs/notion/src/: main.py
stubs/notion/tests/: mainnn.py
stubs/salesfoce/: test.py
stubs/salesfoce/src/: python112.py
tests/: __init__.py
